# nowe

./: README.md  film.7z
agit/: CMakeLists.txt  GUI.fxml
agit/GameLogic/: main.cpp
agit/OpenCvProject/: CMakeLists.txt  TestApp1.cpp
agit/Testy/: testy.txt
agit/Testy/circledetection/: TestApp1.h
agit/Testy/test/: TestApp1.cpp
agit/Testy/test2/: CMakeLists.txt  TestApp1.cpp
agit/Testy/test3/: TestApp1.cpp
agit/WindowsFormsApp1/: WindowsFormsApp1.sln
agit/WindowsFormsApp1/WindowsFormsApp1/: Form1.Designer.cs  Form1.cs  WindowsFormsApp1.csproj
agit/WindowsFormsApp1/WindowsFormsApp1/Properties/: AssemblyInfo.cs
agit/game/: CMakeLists.txt  main.cpp
agit/gameLib/: CMakeLists.txt  cameralib.h  game.h  libgame.h
agit/openCv/: main.cpp
agit/openCvLib/: CMakeLists.txt
agit/project/: CMakeLists.txt  Main.cpp  cameralib.h  game.h  libgame.h
agit/qt/: form.ui
